[package]
authors = ["Mikail Khan <mikail.khan45@gmail.com>"]
edition = "2018"
name = "calculatex"
version = "0.1.0"
repository = "https://github.com/mkhan45/calculatex"

[lib]
name = "calculatex"
crate_type = ["cdylib", "rlib"]

[[bin]]
name = "calculatex_cli"
path = "src/bin/main.rs"
required-features = ["build-binary"]

[features]
build-binary = ["tempfile", "pandoc", "notify"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"

num = "0.3.1"

tempfile = { version = "3.2.0", optional = true }
pandoc = { version = "0.8", optional = true }
notify = { version = "4.0.15", optional = true }

lazy_static = "1.4.0"
bimap = "0.6.0"
